@@ -21,7 +21,7 @@ If you configured external Elasticsearch, inspect that deployment's logs separat
 **Solution:**
 
 1. Check if the default ports are already occupied:
-   - `8080` – Camunda core (Operate, Tasklist, Identity, APIs)
+   - `8080` – Camunda core (Operate, Tasklist, Admin, APIs)
    - `8086` – Connectors API
    - `26500` – Zeebe gRPC gateway
    - `9600` – Prometheus metrics
@@ -39,7 +39,7 @@ If you configured external Elasticsearch, inspect that deployment's logs separat
    ./c8run start --port 8081
    ```
 
-3. If using Docker mode, ensure no containers are using these ports:
+3. If you also run the Docker Compose quickstart or other local containers, ensure they are not using these ports:
 
    ```bash
    docker ps
@@ -48,21 +48,20 @@ If you configured external Elasticsearch, inspect that deployment's logs separat
 
 ### Java version issues
 
-**Problem:** Camunda 8 Run fails to start due to incorrect Java version or missing `JAVA_HOME`.
+**Problem:** Camunda 8 Run fails to start with a Java-related error.
 
 **Solution:**
 
-1. Verify Java is installed (OpenJDK 21–25 required):
+Camunda 8 Run includes a bundled Java runtime. In most cases, no Java installation is needed. If the bundled runtime is missing or corrupted, Camunda 8 Run falls back to the system JDK.
 
-   ```bash
-   java -version
-   ```
+1. Re-download and extract the Camunda 8 Run archive to restore the bundled runtime.
 
-2. Ensure `JAVA_HOME` is set:
+2. If you want to use a system JDK instead, ensure `JAVA_HOME` points to OpenJDK 21–25 and verify it is set correctly:
 
    ```bash
    # macOS/Linux
    echo $JAVA_HOME
+   java -version
 
    # Windows
    echo %JAVA_HOME%
@@ -81,7 +80,13 @@ If you configured external Elasticsearch, inspect that deployment's logs separat
    setx JAVA_HOME "C:\Program Files\Java\jdk-21"
    ```
 
-Replace `21` in the examples with the version you installed (21–25), and open a new terminal after setting `JAVA_HOME`.
+   Replace `21` with your installed version (21–25), and open a new terminal after setting `JAVA_HOME`.
+
+### Unexpected JVM flags in logs
+
+**Problem:** Camunda 8 Run appends `--enable-native-access=ALL-UNNAMED` and `--sun-misc-unsafe-memory-access=allow` to `JDK_JAVA_OPTIONS` when using Java 25 or newer. This may appear in logs or interfere with tools that inspect JVM options.
+
+**Solution:** This is expected behavior. These flags are required for Java 25 compatibility and are appended automatically. Any values you set in `JDK_JAVA_OPTIONS` beforehand are preserved.
 
 ### Incomplete startup
 
@@ -110,8 +115,8 @@ Replace `21` in the examples with the version you installed (21–25), and open 
    ```
 
 3. Access components manually if the browser does not open automatically:
-   - Operate: http://localhost:8080/operate
-   - Tasklist: http://localhost:8080/tasklist
+   - Operate: [http://localhost:8080/operate](http://localhost:8080/operate)
+   - Tasklist: [http://localhost:8080/tasklist](http://localhost:8080/tasklist)
 
 ## Memory and performance issues
 
@@ -262,41 +267,6 @@ On Windows, open this page directly: [http://localhost:9200/\_cluster/health](ht
    Invoke-WebRequest -Uri http://localhost:8080/v2/topology -Headers @{Authorization="Basic $base64"}
    ```
 
-## Docker-specific issues
-
-### Docker Compose fails to start
-
-**Problem:** Running Camunda 8 Run with the `--docker` option fails.
-
-**Solution:**
-
-1. Ensure Docker is running:
-
-   ```bash
-   docker --version
-   docker ps
-   ```
-
-2. Verify that Docker has sufficient resources allocated (recommended: 4 CPU cores, 8 GB RAM).
-3. Check for conflicting containers:
-
-   ```bash
-   docker ps -a
-   docker rm <container-name>
-   ```
-
-4. Pull the latest images:
-
-   ```bash
-   docker compose -f docker-compose-8.8/docker-compose.yaml pull
-   ```
-
-5. If you suspect data corruption, remove old volumes before restarting:
-
-   ```bash
-   docker compose -f docker-compose-8.8/docker-compose.yaml down -v
-   ```
-
 ## Configuration issues
 
 ### Custom configuration not loading
@@ -360,13 +330,7 @@ On Windows, open this page directly: [http://localhost:9200/\_cluster/health](ht
            url: jdbc:h2:file:./camunda-data/h2db
    ```
 
-2. In Docker mode, avoid using the `-v` flag when stopping containers, as it removes all volumes and deletes persisted data:
-
-   ```bash
-   docker compose -f docker-compose-8.8/docker-compose.yaml down
-   ```
-
-3. Check that the application has permission to write to the data directory (for example, `camunda-data/` or any configured mount path).
+2. Check that the application has permission to write to the data directory (for example, `camunda-data/` or any configured mount path).
 
 ## Connector issues
 
@@ -400,11 +364,11 @@ On Windows, open this page directly: [http://localhost:9200/\_cluster/health](ht
 
 1. For non-Docker mode, export connector secrets as environment variables:
 
-```bash
-export MY_SECRET_KEY=secret_value
-```
+   ```bash
+   export MY_SECRET_KEY=secret_value
+   ```
 
-2. For Docker mode, add secrets to the `connector-secrets.txt` file located in the Docker Compose folder.
+2. For the Docker Compose setup, add secrets to the `connector-secrets.txt` file located in the Docker Compose folder.
 3. Restart Camunda 8 Run after adding or modifying secrets.
 
 ## Ubuntu-specific issues
